--- a/assist/css/style.css
+++ b/assist/css/style.css
@@ -90,7 +90,7 @@ body{
   background-color: rgb(247, 248, 250);
   height: auto;
   width: 100%; 
-  margin-top: 8rem
+  margin-top: 8rem;
 }
 .line {
     height: 4px;
